    wasn't working.
  * libssl0.9.8.postinst: Add workaround to find the name of the init 
    script for proftpd and dovecot.
  * libssl0.9.8.postinst: Use invoke-rc.d when it's available.
  * Change Standards-Version to 3.7.0:
    - Make use of invoke-rc.d
  * Add comment to README.Debian that rc5, mdc2 and idea have been
    disabled (since 0.9.6b-3)  (Closes: #362754)

 -- Kurt Roeckx <kurt@roeckx.be>  Thu,  6 Apr 2006 20:34:07 +0200

openssl (0.9.8a-8) unstable; urgency=low

  * Call pod2man with the proper section.  Section changed
    from 1/3/5/7 to 1SSL/3SSL/5SSL/7SSL.  The name of the files
    already had the ssl in, the section didn't.  The references
    to other manpage is still wrong.
  * Don't install the LICENSE file, it's already in the copyright file.
  * Don't set an rpath on openssl to point to /usr/lib.
  * Add support for kfreebsd-amd64. (Closes: #355277)
  * Add udeb to the shlibs.  Patch from Frans Pop <aragorn@tiscali.nl>
    (Closes: #356908)

 -- Kurt Roeckx <kurt@roeckx.be>  Sat, 11 Feb 2006 14:14:37 +0100

openssl (0.9.8a-7) unstable; urgency=high

  * Add italian debconf templates.  Thanks to Luca Monducci.
    (Closes: #350249)
  * Change the debconf question to use version 0.9.8-3
    instead of 0.9.8-1, since that's the last version
    with a security fix.
  * Call conn_state() if the BIO is not in the BIO_CONN_S_OK state
    (Closes: #352047).  RC bug affecting testing, so urgency high.

 -- Kurt Roeckx <kurt@roeckx.be>  Sat,  9 Feb 2006 19:07:56 +0100

openssl (0.9.8a-6) unstable; urgency=low

  * Remove empty postinst/preinst/prerm scripts.  There is no need
    to have empty ones, debhelper will add them when needed.
  * Remove the static pic libraries.  Nobody should be linking
    it's shared libraries static to libssl or libcrypto.
    This was added for opensc who now links to it shared.
  * Do not assume that in case the sequence number is 0 and the
    packet has an odd number of bytes that the other side has